# DebridStreamer

./: .dockerignore  .git-commit-template.txt  .gitattributes  .gitignore  COMPETITION_AND_ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Package.resolved  Package.swift  README.md  REVIEW_PLAN.md  SECURITY.md  V2_PLAN.md  node_modules
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  install_support.yml
.github/workflows/: ci.yml  clean-install.yml  cloudflare-site.yml  deb-release.yml  desktop-build.yml  docker-image.yml  notarize-dmg.yml  provider-smoke.yml  site.yml  web-release.yml
.wrangler/cache/: pages.json
Sources/DebridStreamer/App/: AppState.swift  DebridStreamerApp.swift
Sources/DebridStreamer/Models/: AIAffinityVerdict.swift  AIAssistantModels.swift  AICurationCacheEntry.swift  AIDiscoverPlan.swift  AssistantMemoryChunk.swift  CastMember.swift  DebridConfig.swift  Episode.swift  FeedbackScaleMode.swift  InternalPlayerBackend.swift  LibraryFolder.swift  LibraryFoldering.swift  MediaItem.swift  MediaType.swift  Person.swift  PreferredPlayer.swift  StreamInfo.swift  Subtitle.swift  TasteEvent.swift  TorrentResult.swift  UserTasteProfile.swift  WatchHistory.swift  WatchedStatus.swift
Sources/DebridStreamer/ViewModels/: AIAssistantViewModel.swift  DiscoverAICurationStore.swift  DiscoverCatalogStore.swift  DiscoverFeedbackViewModel.swift  DiscoverViewModel.swift  LibraryViewModel.swift  PlayerViewModel.swift  SearchViewModel.swift
Sources/DebridStreamer/Views/: BootView.swift  ContentView.swift
Tests/DebridStreamerTests/App/: AppBootTests.swift  AppStateLogicTests.swift  AppStatePlayerWindowTests.swift
Tests/DebridStreamerTests/Models/: AIAffinityVerdictTests.swift  AIAssistantModelsTests.swift  AIDiscoverPlanTests.swift  DebridConfigTests.swift  EpisodeTests.swift  InternalPlayerBackendTests.swift  MediaItemTests.swift  MediaTypeTests.swift  ModelSerializationAndDisplayTests.swift  PreferredPlayerTests.swift  StreamInfoTests.swift  SubtitleTests.swift  TasteFolderFeedbackTests.swift  TorrentResultTests.swift  WatchHistoryTests.swift  WatchedStatusTests.swift
Tests/DebridStreamerTests/TestSupport/: InMemorySecretStore.swift  MockURLProtocol.swift  StubMetadataProvider.swift
android-tv/: README.md  SIGNING_CERT_SHA256  settings.gradle
android-tv/app/: build.gradle
deploy/compose/: .env.example  Caddyfile  README.md  docker-compose.caddy.yml  docker-compose.ghcr.yml  docker-compose.yml
deploy/systemd/: debridstreamer.service
deploy/ubuntu/: README.md  install.sh
docs/: DOCKER.md  FEATURE-GAPS.md  KEYS.md  OMDB.md  PERFORMANCE_BUDGETS.md  PLAYER_COMPETITIVE_COMPARISON.md  README.md  RELEASE_AND_UPDATES.md  SECURITY_DECISIONS.md  SELF_HOSTING_DESIGN.md  TAURI_LINUX_GTK_MIGRATION.md  UX-AUDIT.md  ai-scoreboard.md  feature-gap-audit.md  multi-user-and-profiles.md  recovery.md  remote-access.md  self-hosting.md  server-mode-features.md  skill-tiers.md
docs/verification/: v0.9.18.md  v0.9.19.md  v0.9.20.md  v0.9.21.md
poc-tauri/: README.md  package-lock.json  package.json
poc-tauri/src/: App.css  App.tsx
poc-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
poc-tauri/src-tauri/src/: lib.rs  main.rs
scripts/: build_deb.sh  build_sign_install.sh  capture_website_media.mjs  check_app_responsive_contract.mjs  check_bundle_budgets.mjs  check_bundle_budgets.test.mjs  check_commit_privacy.mjs  check_commit_privacy.test.mjs  check_local_package_artifact.mjs  check_release_readiness.mjs  check_security_decisions.mjs  check_swift_tests.mjs  check_website_app.mjs  check_website_download_logic.mjs  check_website_path_mount.mjs  check_website_static.mjs  deploy_website_cloudflare.mjs  download_ffmpeg.mjs  download_tauri_node_runtime.mjs  embed_secrets.mjs  generate_website_media.mjs  generate_windows_signing_config.mjs  generate_windows_signing_config.test.mjs  gpu-bisect.console.js  package_tauri_local.mjs  prepare_tauri_server_resources.mjs  provider_smoke.mjs  provider_smoke.test.mjs  public_repo_preflight.mjs  public_repo_preflight.test.mjs  smoke_tauri_server_bundle.mjs
server/: .gitignore  README.md  node_modules  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/src/: ai-runtime.d.ts  ai-runtime.js  app.ts  bandwidth.ts  config.ts  crypto.ts  db.ts  embeddedSecrets.ts  index.ts  media-runtime.d.ts  media-runtime.js  metadata-runtime.d.ts  metadata-runtime.js  omdb.ts  recovery.ts  remoteControl.ts  schema.ts  ssrf.ts  subtitles-runtime.d.ts  subtitles-runtime.js  transcode.ts  transcodeSession.ts  types.ts  version.ts
server/test/: app.test.ts  bandwidth.test.ts  crypto.test.ts  db.test.ts  embeddedSecrets.test.ts  media-runtime.test.ts  metadata-runtime.test.ts  omdb-route.test.ts  omdb.test.ts  recovery.test.ts  remoteControl.test.ts  setup.ts  ssrf.test.ts  transcodeSession.test.ts
web/: .gitignore  PACKAGING.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  server-mode.js  sw.js
web/src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
web/src-tauri/: Cargo.toml  DEPLOYMENT.md  EMBEDDED_PLAYER.md  RENDER_PLAYER_PLAN.md  build.rs  entitlements.plist  tauri.conf.json
web/src-tauri/capabilities/: default.json  remote.json
web/src-tauri/icons/: icon.icns
web/src-tauri/lib/: .gitignore
web/src-tauri/permissions/: desktop-commands.toml  remote-desktop-commands.toml
web/src-tauri/resources/ffmpeg/: README.md
web/src-tauri/resources/server/: README.md
web/src-tauri/scripts/: bundle-mpv-deps.sh
web/src-tauri/src/: cast.rs  downloads.rs  keychain.rs  lib.rs  main.rs  playback_auth.rs  playback_proxy.rs  player.rs  render_player.rs  server_host.rs
web/src-tauri/src/render_player/: core.rs  mod.rs  stub.rs  surface_linux.rs  surface_macos.rs  surface_windows.rs
web/src-tauri/tests/: acl.rs
website/: README.md  app.js  index.html  styles.css
website-app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website-app/src/: App.tsx  index.css  main.tsx  theme.config.ts
(+736 files in other folders)
